--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ body {
   grid-column: 2;
 }
 
+.animais-lista li {
+  cursor: pointer;
+}
+
 .animais-lista::-webkit-scrollbar {
   width: 18px;
 }
@@ -211,5 +215,25 @@ body {
   .copy {
     margin-bottom: 0px;
     grid-column: 1/4;
+  }
+}
+
+.js-tabcontent section {
+  display: none;
+}
+
+.js-tabcontent section.ativo {
+  display: block !important;
+  animation: show 0.5s forwards;
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+  }
+  from {
+    opacity: 1;
+    transform: translate3d(0x, 0, 0);
   }
 }
