--- a/css/style.css
+++ b/css/style.css
@@ -266,3 +266,14 @@ body {
     max-height: 200px;
   }
 }
+
+.js .js-scroll {
+  opacity: 0;
+  transform: translate3d(-30px, 0, 0);
+  transition: 0.8s;
+}
+
+.js .js-scroll.ativo {
+  opacity: 1;
+  transition: 0.8s;
+}
